--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <!-- Link to global stylesheet -->
     <link rel="stylesheet" href="./global.css" />
+    <!-- Link to specific page stylesheet -->
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
+    <!-- Start of main content section -->
     <div class="rectangle-div">
       <div class="the-beagle-blog-container">
+        <!-- Title of the blog -->
         <p class="the-beagle-blog">
-          <b class="the-beagle-blog1">The Beagle Blog</b>
+          <span>&nbsp;&nbsp;&nbsp;&nbsp;<b><u>The Beagle Blog</u></b></span>
         </p>
+        <!-- Empty line for spacing -->
         <p class="the-beagle-blog">
-          <span class="the">
-            <span class="blank-line2">&nbsp;</span>
+          <span>
+            <span>&nbsp;</span>
           </span>
         </p>
+        <!-- Description of the Beagle breed -->
         <p class="the-beagle-is-a-breed-of-small">
           <span>
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <span class="the">The </span>
             <i class="beagle">Beagle</i>
             <span class="the">
@@ -27,67 +34,82 @@
             </span>
             <i class="beagle">beagle</i>
             <span class="the">
-              was developed primarily for hunting hare, known as beagling.
+              was developed primarily for hunting hare, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;known as beagling.
               Possessing a great sense of smell and superior tracking instincts,
               the
             </span>
             <i class="beagle">beagle</i>
             <span class="the">
               is the primary breed used as a detection dog for prohibited
-              agricultural imports and foodstuffs in quarantine around the
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;agricultural imports and foodstuffs in quarantine around the
               world. The
             </span>
             <i class="beagle">beagle</i>
             <span>
               is intelligent and is a popular pet due to its size, good temper,
-              and a lack of inherited health problems.</span
-            >
+              and a lack of &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;inherited health problems.
+            </span>
           </span>
         </p>
+        <!-- Empty lines for spacing -->
         <p class="the-beagle-blog">
           <span>
             <span>&nbsp;</span>
           </span>
         </p>
+        <!-- Link to external source for more information -->
         <p class="the-beagle-blog">
           <span>
             <span>
-              <span class="the-beagle-blog1"><a href="https://en.wikipedia.org/wiki/Beagle">Read more</a></span>
+              <span class="the-beagle-blog1">
+                &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://en.wikipedia.org/wiki/Beagle"><u>Read more</u></a>
+              </span>
             </span>
           </span>
         </p>
       </div>
     </div>
+    
+    <!-- Images section -->
     <div>
-      <div><b class="images">Images</b></div>
+      <div><b class="images"><span>&nbsp;&nbsp;&nbsp;&nbsp;<u>Images</u></span></b></div>
+      <!-- Empty line for spacing -->
       <p class="the-beagle-blog">
         <span>
           <span>&nbsp;</span>
         </span>
       </p>
-      <div><img class="dog-1-icon" alt="" src="dog 1.png" /></div>
+      <!-- Display an image of a Beagle -->
+      <div><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="dog-1-icon" alt="" src="dog 1.png" /></span></div>
+      <!-- Empty line for spacing -->
       <p class="the-beagle-blog">
         <span>
           <span>&nbsp;</span>
         </span>
       </p>
-      <div class="more-images"><span>&nbsp;&nbsp;&nbsp;&nbsp;More Images</span></div>
+      <!-- Link to more images -->
+      <div class="more-images"><span>&nbsp;&nbsp;&nbsp;&nbsp;<u>More Images</u></span></div>
+      <!-- Empty line for spacing -->
       <p class="the-beagle-blog">
         <span>
           <span>&nbsp;</span>
         </span>
       </p>
-
     </div>
+    
+    <!-- Trivia section -->
     <div class="trivia-height-container">
+      <!-- Title for trivia -->
       <p class="trivia">
         <span>&nbsp;&nbsp;&nbsp;&nbsp;<b class="trivia1">Trivia</b></span>
       </p>
+      <!-- Empty line for spacing -->
       <p class="the-beagle-blog">
         <span>
           <span>&nbsp;</span>
         </span>
       </p>
+      <!-- List of trivia information -->
       <ol class="height-1316-in-3341-cm-w">
         <li class="height-1316-in-3341-cm">
           <span>Height - 13–16 in (33–41 cm)</span>
@@ -96,13 +118,10 @@
           <span>Weight - 22–25 lb (10.0–11.3 kg)</span>
         </li>
         <li class="height-1316-in-3341-cm">
-          <span>Coat -Short haired, hard coat of medium length </span>
+          <span>Coat - Short haired, hard coat of medium length</span>
         </li>
         <li class="height-1316-in-3341-cm">
-          <span
-            >Colour -Tricolor or white in combination with black & tan/brown or
-            brown/tan</span
-          >
+          <span>Colour - Tricolor or white in combination with black & tan/brown or brown/tan</span>
         </li>
         <li>
           <span>Life span - 12–15 years</span>
