--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             </span>
             <i class="beagle">beagle</i>
             <span class="the">
-              is the primary breed used as a detection dog for prohibited
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;agricultural imports and foodstuffs in quarantine around the
+              is the primary breed used as a detection dog for &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;prohibited
+              agricultural imports and foodstuffs in quarantine around the
               world. The
             </span>
             <i class="beagle">beagle</i>
             <span>
               is intelligent and is a popular pet due to its size, good temper,
-              and a lack of &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;inherited health problems.
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and a lack of inherited health problems.
             </span>
           </span>
         </p>
